# Debate-Argument-Builder

./: README.md  pyproject.toml
output/: debate_brief.md
src/debate_argument_builder/: crew.py  frontend.py  main.py
src/debate_argument_builder/config/: agents.yaml  tasks.yaml
